# cpp_py_module_template

./: CMakeLists.txt  build.sh  test_template.py
python/: template.py  template_test.py
src/: libtemplate.cpp
